Fix bg color on ios

--- a/src/layouts/global.css
+++ b/src/layouts/global.css
@@ -61,8 +61,12 @@ table {
 
 html {
     font-family: "Nunito", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-    background: var(--primary-bg);
+    background-color: var(--primary-bg);
     color: var(--color);
+}
+
+body {
+    background-color: var(--primary-bg);
 }
 
 code {
